--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1459,11 +1459,12 @@ review:
          
   - Edit: users1_income_self_employment_monthly_amount
     button: |
-      **Self employment**:
+      **Self employed**:
+      
       % if defined("users1_income_self_employment_monthly_amount"):
-        Yes     
+        - Yes     
       % else:
-        No
+        - No
       % endif     
       
       
@@ -1478,7 +1479,11 @@ review:
       % endif
       
       % for item in expenses:
-      * ${ item.display_name }
+      % if item.display_name == "Other expenses":
+      - ${ item.source.lower() }
+      % else:
+      - ${ item.display_name.lower() }
+      % endif
       % endfor
 
  
@@ -1649,7 +1654,7 @@ table: expenses.table
 rows: expenses
 columns:
   - Type: |
-      row_item.display_name
+      row_item.source.lower()
   - Amount per month: |
       currency(row_item.total(times_per_year=12))
 edit:
