--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -126,11 +126,13 @@ code: |
   public_benefits.gather()
   if public_benefits.there_are_any:
     user_qualifies_interstitial   
-    jobs.gather()
-    review_jobs    
+    if employed:
+      jobs.gather()
+      review_jobs    
   else:
-    jobs.gather()
-    review_jobs
+    if employed:
+      jobs.gather()
+      review_jobs
     set_progress(40)
     
     other_incomes.gather()
@@ -583,6 +585,38 @@ code: |
 #code: |
 #  jobs[x]to_subtract.there_are_any = False
 ---
+id: other itemized job income value
+generic object: ALItemizedJob
+question: |
+  Edit your ${ job_items_names.get(i, i) } in your job as a ${ x.source }
+fields:
+  - Amount: x.to_add[i].value
+    datatype: currency
+    hide if:
+      code: x.is_hourly is True
+  - Your hourly pay rate: x.to_add[i].value
+    datatype: currency
+    show if:
+      code: x.is_hourly is True
+        
+  - How often do you get paid this amount?: x.to_add[i].times_per_year
+    input type: radio
+    code: |
+      times_per_year_list
+    datatype: integer
+    hide if:
+      code: x.is_hourly is True
+  - How often do you get paid?: x.to_add[i].times_per_year
+    input type: radio
+    code: |
+      times_per_year_list
+    datatype: integer
+    show if:
+      code: x.is_hourly is True
+  #- Do you have other additional income from this job? (Examples -- Tips, commissions, bonuses): x.to_add.there_is_another
+    #datatype: yesnoradio
+---
+if: j in ["full time","part time"]
 id: itemized job period
 generic object: ALItemizedJob
 question: |
@@ -623,6 +657,28 @@ fields:
   - Does the job have other incomes, like tips, commissions or bonuses?: jobs[i].to_add.there_is_another
     datatype: yesnoradio
 ---
+if: j not in ["full time","part time"]
+id: itemized job period
+generic object: ALItemizedJob
+question: |
+  Details about ${ j } compensation for your ${ jobs[i].source } job
+fields:
+  - label: |
+      Amount
+    field: jobs[i].to_add[j].value
+    datatype: currency
+  - How often  are you paid?: jobs[i].to_add[j].times_per_year
+    input type: radio
+    code: |
+      times_per_year_list
+    datatype: integer
+  - Does the job have other incomes, like tips, commissions or bonuses?: jobs[i].to_add.there_is_another
+    datatype: yesnoradio
+---
+code: |
+  if j not in ["full time","part time"]:
+    jobs[i].to_add[j].is_hourly = False
+---
 question: Are there more types of non-wage income for your job  as a ${ x.source }?
 subquestion: |
   You have already mentioned:
@@ -653,37 +709,6 @@ validation code: |
   if x.to_add.new_item_name in x.to_add.complete_elements().keys():
     validation_error(f'You already told us about your <strong>{job_items_names.get(x.to_add.new_item_name, x.to_add.new_item_name) }</strong> that pays { currency( x.to_add[ x.to_add.new_item_name ].value )}. Pick a different name.')
 
----
-id: other itemized job income value
-generic object: ALItemizedJob
-question: |
-  Edit your ${ job_items_names.get(i, i) } in your job as a ${ x.source }
-fields:
-  - Amount: x.to_add[i].value
-    datatype: currency
-    hide if:
-      code: x.is_hourly is True
-  - Your hourly pay rate: x.to_add[i].value
-    datatype: currency
-    show if:
-      code: x.is_hourly is True
-        
-  - How often do you get paid this amount?: x.to_add[i].times_per_year
-    input type: radio
-    code: |
-      times_per_year_list
-    datatype: integer
-    hide if:
-      code: x.is_hourly is True
-  - How often do you get paid?: x.to_add[i].times_per_year
-    input type: radio
-    code: |
-      times_per_year_list
-    datatype: integer
-    show if:
-      code: x.is_hourly is True
-  #- Do you have other additional income from this job? (Examples -- Tips, commissions, bonuses): x.to_add.there_is_another
-    #datatype: yesnoradio
 ---
 id: edit wages and other incomes from a job
 generic object: ALItemizedJob
